fixtures/invalid/nested-list.mu
@list kind="unordered"
- Parent
  - Child
